Added home and book pages.

--- a/frontend/static/styles/hover.css
+++ b/frontend/static/styles/hover.css
@@ -312,6 +312,8 @@
 .hvr-sink:hover, .hvr-sink:focus, .hvr-sink:active {
   -webkit-transform: translateY(8px);
   transform: translateY(8px);
+  background-color: red;
+  border-color: red;
 }
 
 /* Bob */
