--- a/frontend/templates/book.html
+++ b/frontend/templates/book.html
@@ -4,8 +4,7 @@
     <!-- bootstrap css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- personal css -->
-    <link rel="stylesheet" type= "text/css" href= "{{ url_for('frontend', filename='/styles/home.css') }}"> 
-    <link rel="stylesheet" type= "text/css" href= "{{ url_for('frontend', filename='/styles/hover.css') }}"> 
+    <link rel="stylesheet" type= "text/css" href= "{{ url_for('frontend', filename='/styles/book.css') }}"> 
     <!-- bootstrap js -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -41,12 +40,29 @@
 
     <body>
         <div class="body">
-            <div class="profile-card">
-                <div class="card-body">
-                <h1 class="card-title">Juan Dela Cruz</h1>
-                <p class="card-text"> juandelacruz@gmail.com</p>
-                <p class="card-text card-text-margin">7114 Kundiman Street, Sampaloc, 1008 Manila, Philippines</p>
-                <a href="book.html" class="btn btn-primary book-button hvr-sink">BOOK A RIDE</a>
+            <div class="profile-card card-attrib">
+                <div class="card-body dropdown-position">
+                    <h1 class="card-title card-title-attrib"><center>RESERVE SEAT</center></h1>
+                        <div class="btn-group">
+                            <button class="btn btn-secondary btn-lg dropdown-toggle button-attrib" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Origin</button>
+                            <div class="dropdown-menu button-attrib">
+                            </div>
+                        </div>
+                        <div class="btn-group">
+                            <button class="btn btn-secondary btn-lg dropdown-toggle button-attrib" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Destination</button>
+                            <div class="dropdown-menu button-attrib">
+                            </div>
+                        </div>
+                        <div class="btn-group">
+                            <button class="btn btn-secondary btn-lg dropdown-toggle button-attrib" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Departing Date</button>
+                            <div class="dropdown-menu button-attrib">
+                            </div>
+                        </div>
+                        <div class="btn-group">
+                            <button class="btn btn-secondary btn-lg dropdown-toggle button-attrib" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Number of Tickets</button>
+                            <div class="dropdown-menu button-attrib">
+                            </div>
+                        </div>
                 </div>
             </div>
 
