login form response

--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -19,7 +19,7 @@
 			</form>
 		</div>
 		<div class="form-container sign-in-container">
-			<form action="Login" method="POST">
+			<form action="{{ url_for('login') }}" method="POST">
 				<h1>Log in</h1>
 				<div class="two-forms-container">
 					<a href="#" class="social social-facebook-icon hvr-buzz-out"><i class="facebook"></i></a>
