--- a/frontend/templates/book.html
+++ b/frontend/templates/book.html
@@ -66,102 +66,37 @@
                 </div>
             </div>
 
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th scope="col">DATE</th>
-                    <th scope="col">TIME</th>
-                    <th scope="col">BUS COMPANY</th>
-                    <th scope="col">TICKET NUMBER</th>
-                    <th scope="col">STATUS</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <th scope="row">01/01/20</th>
-                    <td>6:00 PM</td>
-                    <td>Santrans</td>
-                    <td>#20200000001</td>
-                    <td>Approved</td>
-                </tr>
-                <tr>
-                    <th scope="row">02/01/20</th>
-                    <td>8:30 AM</td>
-                    <td>Megabus</td>
-                    <td>#20200000002</td>
-                    <td>Pending</td>
-                </tr>
-                <tr>
-                    <th scope="row">03/01/20</th>
-                    <td>12:15 PM</td>
-                    <td>AMV Bus</td>
-                    <td>#20200000003</td>
-                    <td>Approved</td>
-                </tr>
-                    <th scope="row">01/01/20</th>
-                    <td>6:00 PM</td>
-                    <td>Santrans</td>
-                    <td>#20200000001</td>
-                    <td>Approved</td>
-                </tr>
-                <tr>
-                    <th scope="row">02/01/20</th>
-                    <td>8:30 AM</td>
-                    <td>Megabus</td>
-                    <td>#20200000002</td>
-                    <td>Pending</td>
-                </tr>
-                <tr>
-                    <th scope="row">03/01/20</th>
-                    <td>12:15 PM</td>
-                    <td>AMV Bus</td>
-                    <td>#20200000003</td>
-                    <td>Approved</td>
-                </tr>
-                <tr>
-                    <th scope="row">01/01/20</th>
-                    <td>6:00 PM</td>
-                    <td>Santrans</td>
-                    <td>#20200000001</td>
-                    <td>Approved</td>
-                </tr>
-                <tr>
-                    <th scope="row">02/01/20</th>
-                    <td>8:30 AM</td>
-                    <td>Megabus</td>
-                    <td>#20200000002</td>
-                    <td>Pending</td>
-                </tr>
-                <tr>
-                    <th scope="row">03/01/20</th>
-                    <td>12:15 PM</td>
-                    <td>AMV Bus</td>
-                    <td>#20200000003</td>
-                    <td>Approved</td>
-                </tr>
-                    <th scope="row">01/01/20</th>
-                    <td>6:00 PM</td>
-                    <td>Santrans</td>
-                    <td>#20200000001</td>
-                    <td>Approved</td>
-                </tr>
-                <tr>
-                    <th scope="row">02/01/20</th>
-                    <td>8:30 AM</td>
-                    <td>Megabus</td>
-                    <td>#20200000002</td>
-                    <td>Pending</td>
-                </tr>
-                <tr>
-                    <th scope="row">03/01/20</th>
-                    <td>12:15 PM</td>
-                    <td>AMV Bus</td>
-                    <td>#20200000003</td>
-                    <td>Approved</td>
-                </tr>
-                </tbody>
-            </table>
+            <div class="card" style="margin-bottom: 50px">
+                <h3 class="card-header">AMV Bus</h3>
+                <div class="card-body">
+                  <h5 class="card-title">309 P.Tuazon Blvd., Project 4, Quezon City, 1109 Metro Manila</h5>
+                  <h5 class="card-text">Number of Seats Available: 20 Seats</h5>
+                  <h5 class="card-text price">Php 165.00</h5>
+                  <a href="#" class="btn btn-danger">SELECT</a>
+                  </div>
+                </div>
+
+            <div class="card" style="margin-bottom: 50px">
+                <h3 class="card-header">AMV Bus</h3>
+                <div class="card-body">
+                    <h5 class="card-title">309 P.Tuazon Blvd., Project 4, Quezon City, 1109 Metro Manila</h5>
+                    <h5 class="card-text">Number of Seats Available: 20 Seats</h5>
+                    <h5 class="card-text price">Php 165.00</h5>
+                    <a href="#" class="btn btn-danger">SELECT</a>
+                </div>
+            </div>
+
+            <div class="card" style="margin-bottom: 50px">
+                <h3 class="card-header">AMV Bus</h3>
+                <div class="card-body">
+                    <h5 class="card-title">309 P.Tuazon Blvd., Project 4, Quezon City, 1109 Metro Manila</h5>
+                    <h5 class="card-text">Number of Seats Available: 20 Seats</h5>
+                    <h5 class="card-text price">Php 165.00</h5>
+                    <a href="#" class="btn btn-danger">SELECT</a>
+                </div>
+            </div>
         </div>
-    </body>
+    </div>
+</body>
 
 </html>
