info now reflects to frontend

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -43,8 +43,8 @@
         <div class="body">
             <div class="profile-card">
                 <div class="card-body">
-                <h1 class="card-title">Juan Dela Cruz</h1>
-                <p class="card-text"> juandelacruz@gmail.com</p>
+                <h1 class="card-title">{{info.firstname}} {{info.lastname}}</h1>
+                <p class="card-text"> {{info.email}}</p>
                 <p class="card-text card-text-margin">7114 Kundiman Street, Sampaloc, 1008 Manila, Philippines</p>
                 <a href="book.html" class="btn btn-primary book-button hvr-sink">BOOK A RIDE</a>
                 </div>
