--- a/frontend/templates/book.html
+++ b/frontend/templates/book.html
@@ -22,7 +22,7 @@
             <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav_item-color nav-link" href="#">ABOUT US</a>
+                        <a class="nav_item-color nav-link" href="/about">ABOUT US</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav_item-color nav-link" href="#">BUS PARTNERS</a>
