--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -46,7 +46,7 @@
                 <h1 class="card-title">{{info.firstname}} {{info.lastname}}</h1>
                 <p class="card-text"> {{info.email}}</p>
                 <p class="card-text card-text-margin">7114 Kundiman Street, Sampaloc, 1008 Manila, Philippines</p>
-                <a href="book.html" class="btn btn-primary book-button hvr-sink">BOOK A RIDE</a>
+                <a href="/book" class="btn btn-primary book-button hvr-sink">BOOK A RIDE</a>
                 </div>
             </div>
 
