--- a/frontend/templates/book.html
+++ b/frontend/templates/book.html
@@ -25,13 +25,13 @@
                         <a class="nav_item-color nav-link" href="/about">ABOUT US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav_item-color nav-link" href="#">BUS PARTNERS</a>
+                        <a class="nav_item-color nav-link" href="/buspartners">BUS PARTNERS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav_item-color nav-link" href="#">MY ACCOUNT</a>
+                        <a class="nav_item-color nav-link" href="/">MY ACCOUNT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav_item-color nav-link" href="#">LOGOUT</a>
+                        <a class="nav_item-color nav-link" href="/logout">LOGOUT</a>
                     </li>
                 </ul>
             </div>
