--- a/frontend/static/styles/book.css
+++ b/frontend/static/styles/book.css
@@ -117,50 +117,35 @@ nav.shift ul li a:hover:after {
     margin-bottom: 10px;
 }
 
-.notice1{
-    color: red;
-    font-weight: bold;
-}
-
-.para-1 {
-    background-color: dimgray;
-}
-
-/* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
-    width: 50; 
-    height: 50%; 
+    width: 70%; /* Full width */
+    height: 50%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(141, 111, 111, 0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content */
-  .modal-content {
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
     background-color: #fefefe;
-    margin: auto;
+    margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 50%;
-  }
-
-  /* The Close Button */
-.close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+    width: 80%; /* Could be more or less, depending on screen size */
 }
-  
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
+
+.modal-header {
+    padding: 2px 16px;
+    background-color: red;
+    color: white;
+}
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color:red;
+    color: white;
 }
