Fixed multiple ticket booking on book and address on home

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -45,7 +45,7 @@
                 <div class="card-body">
                 <h1 class="card-title">{{info.firstname}} {{info.lastname}}</h1>
                 <p class="card-text"> {{info.email}}</p>
-                <p class="card-text card-text-margin">7114 Kundiman Street, Sampaloc, 1008 Manila, Philippines</p>
+                <p class="card-text card-text-margin">{{info.address}}</p>
                 <a href="/book" class="btn btn-primary book-button hvr-sink">BOOK A RIDE</a>
                 </div>
             </div>
