For Loop Modal Problem

--- a/frontend/templates/book.html
+++ b/frontend/templates/book.html
@@ -37,28 +37,39 @@
             </div>
         </nav>
     </header>
-
+       
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content">
+            <div class="modal-content" style="text-align: justify">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <h4 class="modal-title" id="exampleModalLabel">BUS DETAILS</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                 <div class="modal-body">
-                ...
+                    <h5 style="font-weight: bold;">{{s.company}}</h5>
+                    <p>Route: From {{s.origin}} To {{s.destination}}</p>
+                    <p>Number of Seats Available: 20 Seats</p>
+                    <p style="font-weight: bold;">Total Price: {{s.total_fee}}</p>
+                    <p style="font-style: italic;">**Ticket Price: {{s.ticket_fee}}<br>**Service Fee: Php 50.00</p>
+                    <p style="color:red">* Cancellation Policy</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p style="color:red">* Reminders</p>
+                    <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
                 </div>
-                    <div class="modal-footer">
+                <div class="modal-footer">
+                    <form action="{{ url_for('book') }}" method="POST">
+                        <input type="checkbox" id="choice" name="agree" value="yes">
+                        <label for="choice">I AGREE TO THE TERMS AND CONDITIONS</label><br>
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
+                        <button type="button" class="btn btn-danger">Confirm</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-
     <body>
         <div class="body">
             <div class="profile-card card-attrib">
@@ -86,20 +97,16 @@
                         </div>
                 </div>
             </div>
-            
-          
-            
             {% for s in schedules %}
                 <div class="card" style="margin-bottom: 50px">
                     <h3 class="card-header">{{s.company}}</h3>
                     <div class="card-body">
                         <h5 class="card-title">From {{s.origin}} To {{s.destination}}</h5>
                         <h5 class="card-text">Number of Seats Available: 20 Seats</h5>
-                        <h5 class="card-text price">Php 165.00</h5>
+                        <h5 class="card-text price">{{s.ticket_fee}}</h5>
                         <button id="myBtn" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">SELECT</button>
                     </div>
-                </div> 
-                
+                </div>     
             {% endfor %}
         </div>
 
@@ -107,7 +114,7 @@
             var modal = document.getElementById("myModal");
             var btn = document.getElementById("myBtn");
             var span = document.getElementsByClassName("close")[0];
-
+        
             btn.onclick = function() {
             modal.style.display = "block";
             }
